# numpyML

./: .gitignore  README.md  pyproject.toml  setup.cfg
mlp/: initializers.py  layers.py  losses.py  model.py  types.py
nn/: activations.py  layers.py  losses.py  model.py  optimizers.py  types.py
numpyml/decomposition/: pca.py
numpyml/nn/: initializers.py  losses.py  model.py  optimizers.py  types.py
tests/: xor_MLP_test.ipynb
