[metadata]
name = numpyML
version = 0.0.1
description = A minimal numpy-based ML library for teaching and experiments.
long_description = file: README.md
long_description_content_type = text/markdown
author = NicolaiBaklund
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    pandas
